--- a/package.json
+++ b/package.json
@@ -1,17 +1,83 @@
 {
-  "name": "pfd-merger",
+  "name": "pdf-merger-tool",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "A desktop application to merge multiple PDF files into one",
+  "main": "main.js",
+  "bin": {
+    "pdf-merger": "./cli.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "scripts": {
+    "start": "electron .",
+    "package": "electron-builder --win --mac --linux",
+    "package:win": "electron-builder --win",
+    "package:mac": "electron-builder --mac",
+    "package:linux": "electron-builder --linux",
+    "prepublishOnly": "npm run check-files",
+    "check-files": "node check-files.js"
+  },
+  "keywords": [
+    "pdf",
+    "merge",
+    "combine",
+    "electron",
+    "desktop",
+    "pdf-merger",
+    "pdf-tools",
+    "document-management"
+  ],
+  "author": "Nkosinathi Nkosi <nkosin361@gmail.com>",
+  "homepage": "https://github.com/Nattie-Nkosi/pdf-merger",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nattie-Nkosi/pdf-merger.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Nattie-Nkosi/pdf-merger/issues"
+  },
+  "license": "MIT",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "dependencies": {
-    "electron": "^31.4.0",
-    "electron-prompt": "^1.7.0",
     "pdf-lib": "^1.17.1"
+  },
+  "devDependencies": {
+    "electron": "^31.4.0",
+    "electron-builder": "^24.13.3"
+  },
+  "build": {
+    "appId": "com.pdfmerger.app",
+    "productName": "PDF Merger",
+    "files": [
+      "**/*",
+      "!pdfs-to-merge/**",
+      "!merged-pdf.pdf",
+      "!**/node_modules/**/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!**/node_modules/**/{test,__tests__,tests,powered-test,example,examples}",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}"
+    ],
+    "directories": {
+      "buildResources": "assets",
+      "output": "dist"
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ],
+      "icon": "assets/icon.ico"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "assets/icon.icns"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "icon": "assets/icon.png",
+      "category": "Office"
+    }
   }
 }
