--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf-merger-tool",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "A desktop application to merge multiple PDF files into one",
   "main": "main.js",
   "bin": {
@@ -39,10 +39,10 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "pdf-lib": "^1.17.1",
-    "electron": "^31.4.0"
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
+    "electron": "^31.4.0",
     "electron-builder": "^24.13.3"
   },
   "build": {
